fixing stuff and things (spacing and social icons, still)

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -122,7 +122,7 @@
     .fa {
       font-size: 19px;
       @media @mobile {
-        font-size: 25px;
+        font-size: 18px;
       }
       color: @dark-gray;
       &:hover {
@@ -137,6 +137,10 @@
   text-align: center;
   margin: auto;
   padding: 10px 0;
+  @media @mobile {
+    padding: 0;
+    padding-bottom: 5px;
+  }
 }
 
 .vignettes-footer {
@@ -300,7 +304,7 @@ a {
 }
 
 .title-link-container {
-  margin-bottom: 80px;
+  // margin-bottom: 80px;
   .title-link {
     padding: 0 10px;
     font-size: 25px;
@@ -311,6 +315,9 @@ a {
         color: white;
       }
     }
+  }
+  .author {
+    margin-top: 20px !important;
   }
 }
 
