--- a/src/css/sfchronicle.less
+++ b/src/css/sfchronicle.less
@@ -217,6 +217,7 @@ text {
       width: 90%;
       margin: auto;
     }
+    margin-top: 60px;
   }
 }
 
@@ -225,6 +226,11 @@ text {
     font-size: 15px;
     // text-align: center;
     margin-bottom:0;
+}
+.lms-img {
+  .author {
+    margin-top: 20px !important;
+  }
 }
 .date {
     font-size: 15px;
@@ -260,7 +266,7 @@ text {
       max-width:800px;
     }
     @media @mobile {
-      font-size: 1.8em;
+      font-size: 32px;
     }
   }
 }
